--- a/styles/style.css
+++ b/styles/style.css
@@ -1,48 +1,66 @@
 
 body {
-    /* https://coolors.co/generate and click export -> scss to get the colors to copy and paste below*/
-    /* --color1: hsla(349, 69%, 76%, 1);
-    --color2: hsla(207, 67%, 44%, 1);
-    --color3: hsla(200, 61%, 56%, 1);
-    --color4: hsla(187, 41%, 94%, 1);
-    --color5: hsla(170, 28%, 95%, 1); */
-
-    /* --color1: hsla(45, 86%, 83%, 1);
-    --color2: hsla(135, 65%, 98%, 1);
-    --color3: hsla(315, 37%, 86%, 1);
-    --color4: hsla(45, 73%, 98%, 1);
-    --color5: hsla(224, 40%, 79%, 1); */
-    
-    --header-height: 80px;
-    --shadow: 0px 10px 20px -12px rgba(0,0,0,0.45);
-    --gutter: 30px;
-    --footer-height: 25px;
-    
     font-family: 'Titillium Web', sans-serif;
-    background-color: var(--color2);
 }
+
 
 main {
-    display: flex;
-    flex-direction: column;
+    display: flex; 
+    flex-direction: row;
     justify-content: center;
     align-items: center;
-    margin-bottom: calc(var(--footer-height));
+    margin-top:30px;
 }
 
-section {
-    background-color: var(--color5);
-    width: 1000px;
-    max-width: 80%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding-top: var(--gutter);
-    padding-bottom: var(--gutter);
-    margin-top: var(--gutter);
-    margin-bottom: var(--gutter);
-    border: solid 2px var(--color1);
+#calculator {
+
+}
+
+#input1, #input2 {
+width:65px;
+height:50px;
+font-size:2em;
+text-align:center;
+border: 1px dashed;
+padding-left:5px;
+
+}
+#addButton, #subtractButton, #multiplyButton, #divideButton, #pi 
+{
+    height:40px;
+    width:40px;
+    align-content:space-between;
+    border: 1px dashed;
+    background-color: white;
+    font-size:1.5em;
+    margin: 0px 5px 0px 0px;
+}
+
+#square{
+    height:20px;
+    width:20px;
+    font-size:.85em;
+    position: relative;
+    top:-17px;
+    left:10px;
+    border: 1px dashed;
+    background-color: white;;
+}
+
+#cube{
+    height:20px;
+    width:20px;
+    font-size:.85em;
+    position: relative;
+    top: 7px;
+    left:-10px;
+    border: 1px dashed;
+    background-color: white;
+}
+
+#solution {
+    padding:30px;
+    font-size:2em;
 }
 
 header {
@@ -60,28 +78,10 @@ footer {
     box-shadow: var(--shadow);
 }
 
-
-h2 {
-    font-size: 1.8rem;
-    font-weight: bold;
-}
-
-.gutter-right {
+/* .gutter-right {
     margin-right: 20px;
-}
+} */
 
-.main-logo {
-    animation: pulse 5s infinite ease-in-out;
-}
-
-header img {
-    height: var(--header-height);
-}
-
-p {
-    margin: var(--gutter);
-}
-  
 footer {
     position: fixed;
     width: 100%;
@@ -110,4 +110,44 @@ footer {
         transform: rotate3d(10, 10, 10, 50deg) scale(1);
     }
 
+  }
+  @-webkit-keyframes hvr-hang {
+    0% {
+      -webkit-transform: translateY(8px);
+      transform: translateY(8px);
+    }
+    50% {
+      -webkit-transform: translateY(4px);
+      transform: translateY(4px);
+    }
+    100% {
+      -webkit-transform: translateY(8px);
+      transform: translateY(8px);
+    }
+  }
+  @keyframes hvr-hang {
+    0% {
+      -webkit-transform: translateY(8px);
+      transform: translateY(8px);
+    }
+    50% {
+      -webkit-transform: translateY(4px);
+      transform: translateY(4px);
+    }
+    100% {
+      -webkit-transform: translateY(8px);
+      transform: translateY(8px);
+    }
+  }
+  @-webkit-keyframes hvr-hang-sink {
+    100% {
+      -webkit-transform: translateY(8px);
+      transform: translateY(8px);
+    }
+  }
+  @keyframes hvr-hang-sink {
+    100% {
+      -webkit-transform: translateY(8px);
+      transform: translateY(8px);
+    }
   }
