--- a/styles/style.css
+++ b/styles/style.css
@@ -14,12 +14,15 @@ main {
     margin-left:182px;
     display: flex;
     flex-flow: column nowrap;
+    position: relative;
+    top:-30px;
+    left:-29px;
 }
 
 #input1 {
     width:65px;
     height:50px;
-    font-size:2em;
+    font-size:1.25em;
     text-align:center;
     border: 1px dashed;
     padding-left:5px;
@@ -29,16 +32,15 @@ main {
     #input2 {
         width:65px;
         height:50px;
-        font-size:2em;
+        font-size:1.25em;
         text-align:center;
         border: 1px dashed;
         padding-left:5px;
         position: relative;
-        top:-140px;
-        left:8px;
+        top: -150px;
+        left:-2px;
 
     }
-    
     
     #square{
         height:20px;
@@ -47,8 +49,9 @@ main {
         border: 1px dashed;
         background-color: white;
         margin-left:5px;
-        display: flex;
-        flex-direction: column;
+        position: relative;
+        top:-3px;
+
     }
     
     #cube{
@@ -57,10 +60,8 @@ main {
         font-size:.85em;
         border: 1px dashed;
         background-color: white;
-        margin-left:5px;
-        margin-top:5px;
-        display: flex;
-        flex-direction: column;
+        position: relative;
+        top: -3px;
     }
     
     #solution {
@@ -68,13 +69,23 @@ main {
         font-size:2em;
     }
 
-    #addButton, #subtractButton, #multiplyButton, #divideButton, #pi 
-    {
+    #pi {
         height:40px;
         width:40px;
         border: 1px dashed;
         background-color: white;
         font-size:1.5em;
+        margin-right:5px;
+    }
+
+    #addButton, #subtractButton, #multiplyButton, #divideButton 
+    {
+        height:40px;
+        width:43px;
+        border: 1px dashed;
+        background-color: white;
+        font-size:1.5em;
+        margin-bottom:3px;
     }
 
 
